# XposedOrNot-Rust

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  plus_api.rs
src/: client.rs  errors.rs  lib.rs  models.rs  utils.rs
src/endpoints/: breaches.rs  email.rs  mod.rs  password.rs
tests/: breaches_test.rs  client_test.rs  email_test.rs  password_test.rs  utils_test.rs
